--- a/style.css
+++ b/style.css
@@ -10,8 +10,19 @@
     margin: 0px;
     padding: 0px;
 }
+.title {
+    text-align: center;
+    font-size: 24px;
+    margin-bottom: 16px;
+}
+.game-board {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    gap:8px;
+}  
 .game-tile {
-    width:32px;
-    height: 32px;
+    width:48px;
+    height: 48px;
     border: red solid 2px;
 }
