--- a/style.css
+++ b/style.css
@@ -19,12 +19,13 @@
     display: grid;
     grid-template-columns: auto auto auto;
     justify-content: center;
-    gap:8px;
+    gap:px;
 }  
 .game-tile {
-    width:48px;
+    width: 48px;
     height: 48px;
-    border: red solid 2px;
+    padding:4px;
+    /* border: red solid 2px; */
 }
 .turn {
     text-align: center;
@@ -47,4 +48,10 @@
 }
 .player1, .player2, .reset, .play-ai {
     padding:4px;
+}
+#tile-0, #tile-1, #tile-2, #tile-3, #tile-4, #tile-5 {
+    border-bottom: black solid 2px;
+}
+#tile-0, #tile-1, #tile-3, #tile-4, #tile-6, #tile-7 {
+    border-right: black solid 2px;
 }
