--- a/style.css
+++ b/style.css
@@ -46,10 +46,13 @@
     justify-content: center;
     text-align: center;
 }
-.player1, .player2, .reset, .play-ai {
+.player1, .player2, .reset, .play-ai, .hard-ai {
     padding:4px;
 }
-img, .game-tile {
+.hard-ai {
+    text-decoration:line-through;
+}
+*img {
     transition: all 1s ease-in;
 }
 #tile-0, #tile-1, #tile-2, #tile-3, #tile-4, #tile-5 {
